--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 kotlin.code.style=official
 # Plugins
 systemProp.kotlinVersion=2.1.10
-systemProp.ktorVersion=3.0.3
+systemProp.ktorVersion=3.1.0
 systemProp.versionsVersion=0.52.0
 # Jars
-kotlin_version=2.1.10
-vapi4k_version=1.2.3
+kotlinVersion=2.1.10
+vapi4kVersion=1.2.4
