Convert repo to use libs.versions.toml

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,2 @@
 kotlin.code.style=official
-# Plugins
-systemProp.kotlinVersion=2.2.0
-systemProp.ktorVersion=3.2.0
-systemProp.versionsVersion=0.52.0
-# Jars
-kotlinVersion=2.2.0
-vapi4kVersion=1.3.0
+# Version properties have been moved to gradle/libs.versions.toml
