Upgrade Gradle to 9.2.1, Kotlin to 2.3.0, and dependencies to latest versions; enable resolving -SNAPSHOT versions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-kotlin = "2.2.10"
+kotlin = "2.3.0"
 ktor = "3.2.3"
-versions = "0.52.0"
-vapi4k = "1.3.2"
+versions = "0.53.0"
+vapi4k = "1.3.3-SNAPSHOT"
 
 [libraries]
 vapi4k-core = { group = "com.github.vapi4k.vapi4k", name = "vapi4k-core", version.ref = "vapi4k" }
