--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-kotlin = "2.3.0"
-ktor = "3.2.3"
+kotlin = "2.3.10"
+ktor = "3.4.0"
 versions = "0.53.0"
-vapi4k = "1.3.3-SNAPSHOT"
+vapi4k = "1.4.0"
 
 [libraries]
 vapi4k-core = { group = "com.github.vapi4k.vapi4k", name = "vapi4k-core", version.ref = "vapi4k" }
